# caveblitz

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.circleci/: config.yml
assets/maps/abstract/: map.json
build-container/: Dockerfile  Makefile
scripts/: clang-format  clang-tidy
src/: main.cpp  main.h  server_main.cpp
src/Client/: Explosion.cpp  Explosion.h  FPSManager.cpp  FPSManager.h  Game.cpp  Game.h  InputManager.cpp  InputManager.h  MatchScene.cpp  MatchScene.h  MenuScene.cpp  MenuScene.h  Pickup.cpp  Pickup.h  Projectile.cpp  Projectile.h  Scene.h  ServerConnection.cpp  ServerConnection.h  Ship.cpp  Ship.h
src/Common/: ClientSentData.h  DataTransfer.h  Image.cpp  Image.h  Map.cpp  Map.h  PrimaryWeapon.h  ProjectileType.h  ServerSentData.h  Weapon.h
src/Server/: FreeForAllGameMode.cpp  FreeForAllGameMode.h  GameMode.h  JoinError.cpp  JoinError.h  Match.h  MatchServer.cpp  MatchServer.h  Server.cpp  Server.h  ServerPickup.cpp  ServerPickup.h  ServerPlayer.cpp  ServerPlayer.h  ServerProjectile.cpp  ServerProjectile.h  Weapon.cpp  Weapon.h
